--- a/.gitmodules
+++ b/.gitmodules
@@ -2,6 +2,15 @@
 	path = pack/submodules/start/vim-quickrun
 	url = https://github.com/thinca/vim-quickrun.git
 	ignore = dirty
-[submodule "pack/submodules/start/ale"]
-	path = pack/submodules/start/ale
-	url = https://github.com/w0rp/ale.git
+[submodule "pack/submodules/start/asyncomplete.vim"]
+	path = pack/submodules/start/asyncomplete.vim
+	url = https://github.com/prabirshrestha/asyncomplete.vim.git
+[submodule "pack/submodules/start/async.vim"]
+	path = pack/submodules/start/async.vim
+	url = https://github.com/prabirshrestha/async.vim.git
+[submodule "pack/submodules/start/vim-lsp"]
+	path = pack/submodules/start/vim-lsp
+	url = https://github.com/prabirshrestha/vim-lsp
+[submodule "pack/submodules/start/asyncomplete-lsp.vim"]
+	path = pack/submodules/start/asyncomplete-lsp.vim
+	url = https://github.com/prabirshrestha/asyncomplete-lsp.vim
