--- a/.gitmodules
+++ b/.gitmodules
@@ -11,3 +11,6 @@
 [submodule "pack/submodules/start/vim-airline"]
 	path = pack/submodules/start/vim-airline
 	url = http://github.com/vim-airline/vim-airline.git
+[submodule "pack/submodules/start/vim-fugitive"]
+	path = pack/submodules/start/vim-fugitive
+	url = https://github.com/tpope/vim-fugitive.git
