--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,6 @@
 [submodule "pack/submodules/start/vim-fugitive"]
 	path = pack/submodules/start/vim-fugitive
 	url = https://github.com/tpope/vim-fugitive.git
+[submodule "pack/submodules/start/elm-vim"]
+	path = pack/submodules/start/elm-vim
+	url = https://github.com/ElmCast/elm-vim.git
