--- a/.gitmodules
+++ b/.gitmodules
@@ -23,3 +23,6 @@
 [submodule "pack/language-supports/start/vim-pony"]
 	path = pack/language-supports/start/vim-pony
 	url = https://github.com/jakwings/vim-pony.git
+[submodule "pack/submodules/start/vim-dcrpc"]
+	path = pack/submodules/start/vim-dcrpc
+	url = https://gitlab.com/betseg/vim-dcrpc.git
