--- a/.gitmodules
+++ b/.gitmodules
@@ -29,3 +29,6 @@
 [submodule "pack/language-supports/start/satysfi.vim"]
 	path = pack/language-supports/start/satysfi.vim
 	url = https://github.com/qnighy/satysfi.vim.git
+[submodule "pack/submodules/start/limelight.vim"]
+	path = pack/submodules/start/limelight.vim
+	url = https://github.com/junegunn/limelight.vim.git
